trained version, customized datset
:accept:

--- a/code/train/Train_phase2.ipynb
+++ b/code/train/Train_phase2.ipynb
@@ -39,7 +39,7 @@
     "dataset_path = '../../datasets/VisualPhish/'\n",
     "reshape_size = [224,224,3]\n",
     "phishing_test_size = 0.4\n",
-    "num_targets = 155 \n",
+    "num_targets = 25\n",
     "\n",
     "# Model parameters\n",
     "input_shape = [224,224,3]\n",
@@ -53,10 +53,10 @@
     "new_saved_model_name = 'model2'\n",
     "save_interval = 2000\n",
     "batch_size = 32 \n",
-    "n_iter = 50000\n",
+    "n_iter = 200#50000\n",
     "lr_interval = 300\n",
     "# hard examples training \n",
-    "num_sets = 50\n",
+    "num_sets = 10\n",
     "iter_per_set = 15\n",
     "n_iter = 30\n",
     "batch_size = 32 "
@@ -125,14 +125,14 @@
     "data_path = dataset_path + 'trusted_list/'\n",
     "targets_file = open(data_path+'targets.txt', \"r\")\n",
     "targets = targets_file.read()\n",
-    "imgs_num = 9363\n",
+    "imgs_num = 2031     #9363\n",
     "all_imgs_train,all_labels_train,all_file_names_train = read_imgs_per_website(data_path,targets,imgs_num,reshape_size,0)\n",
     "\n",
     "# Read images phishing\n",
     "data_path = dataset_path + 'phishing/'\n",
     "targets_file = open(data_path+'targets.txt', \"r\")\n",
     "targets = targets_file.read()\n",
-    "imgs_num = 1195\n",
+    "imgs_num = 3821     #1195\n",
     "all_imgs_test,all_labels_test,all_file_names_test = read_imgs_per_website(data_path,targets,imgs_num,reshape_size,0)\n",
     "\n",
     "X_train_legit = all_imgs_train\n",
@@ -603,6 +603,13 @@
     "np.save(output_dir+'phishing_emb2',phishing_emb)\n",
     "np.save(output_dir+'phishing_labels2',all_labels_test )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -621,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
